Fix overlapping flex container

--- a/style.css
+++ b/style.css
@@ -3,13 +3,10 @@
 body{
     margin: 0px;
     background-color: #F4F1E8;
-    width: 100%;
-    margin: 0px;
-    display:block;
 }
 
 .section {
-    height: 400px;
+    min-height: 400px;
 }
 
 #hero {
@@ -18,6 +15,7 @@ body{
     align-items: center;
     text-align: center;
 }
+
 
 
 #hero h1{
@@ -35,20 +33,17 @@ body{
 #about {
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 
 .about-text {
-    width: 60%;
-    padding-right: 5%;
-    padding-left: 5%;
-    flex: 1 1 60%;
-    max-width: 500px;
-    min-width: 200px;
+    padding-right: 1rem;
+    padding-left: 1rem;
+    flex: 0 1 40%; 
 }
 
 .about-img {
     max-width: 250px;
-    flex: 1 1 40%;
 }
 
 img {
@@ -67,6 +62,15 @@ img {
 .text{
     padding: 1rem;
 }
+h2 {
+    font-family: Radley;
+    font-size: 2rem;
+    font-weight: 200;
+}
+
+p {
+    font-family: Carlito;
+}
 
 @media (max-width: 600px){
     #hero h1 {
@@ -79,17 +83,23 @@ img {
 
     body > *{
         flex-direction: column;
+        align-items: center;
     }
+
+    h2 {
+        font-size: 1.5rem;
+    }
+
+    p{
+        font-size: 1rem;
+    }
+
+    .about-img {
+        max-width: 10rem ;
+    }
+
+   
     
 
 }
 
-h2 {
-    font-family: Radley;
-    font-size: 2rem;
-    font-weight: 200;
-}
-
-p {
-    font-family: Carlito;
-}
